--- a/reports/Cyfrin/2023-06-01-Sudoswap.md
+++ b/reports/Cyfrin/2023-06-01-Sudoswap.md
@@ -1,3 +1,18 @@
+**Lead Auditors**
+
+[Giovanni Di Siena](https://twitter.com/giovannidisiena)
+
+[Hans](https://twitter.com/hansfriese)
+
+**Assisting Auditors**
+
+[Alex Roan](https://twitter.com/alexroan)
+
+[0kage](https://twitter.com/0kage_eth)
+
+---
+
+
 # Findings
 
 ## High Risk
