Temp change for the issue content.

--- a/reports/Hans/2023-07-13-Meta.md
+++ b/reports/Hans/2023-07-13-Meta.md
@@ -15,7 +15,7 @@
 **Context:** [`MetaManager.sol#L102-L107`](https://github.com/getmetafinance/meta/blob/00bbac1613fa69e4c180ff53515451df4df9f69e/contracts/meta/MetaManager.sol#L102-L107)
 
 **Description:**
-The purpose of the `MetaManager::getNonSlashRate` function is to calculate and return the percentage of the deposit that will be redeemed for a given `timeInDays` period. The intended range for the non-slash rate is between 50% and 100%.
+The purpose of this `MetaManager::getNonSlashRate` function is to calculate and return the percentage of the deposit that will be redeemed for a given `timeInDays` period. The intended range for the non-slash rate is between 50% and 100%.
 
 However, there is an error in the calculation at line 105. The math is incorrect, and the slope should be in the denominator instead of the numerator.
 
